--- a/SRIS/SRIS/bin/SRIS.dll.config
+++ b/SRIS/SRIS/bin/SRIS.dll.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="SRISDBEntities" connectionString="metadata=res://*/SRISDBModel.csdl|res://*/SRISDBModel.ssdl|res://*/SRISDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=SRISDB;user id=sa;password=1234qwer!@#$QWER;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SRISDBEntities" connectionString="metadata=res://*/SRISDBModel.csdl|res://*/SRISDBModel.ssdl|res://*/SRISDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=139.199.28.251;initial catalog=SRISDB;user id=sa;password=1234qwer!@#$QWER;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
