--- a/SRIS/SRIS/SRIS.csproj
+++ b/SRIS/SRIS/SRIS.csproj
@@ -16,7 +16,7 @@
     <RootNamespace>SRIS</RootNamespace>
     <AssemblyName>SRIS</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <UseIISExpress>false</UseIISExpress>
+    <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -599,14 +599,17 @@
     <Compile Include="Controllers\BBHJCaseController.cs" />
     <Compile Include="Controllers\CaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ReturnCaseController.cs" />
     <Compile Include="Controllers\SuccessCaseController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\BBHJCaseInfo.cs" />
     <Compile Include="ViewModels\FollowDetailsInfo.cs" />
     <Compile Include="ViewModels\LinkMan.cs" />
     <Compile Include="ViewModels\RegisterCaseInfo.cs" />
+    <Compile Include="ViewModels\ReturnCaseInfo.cs" />
     <Compile Include="ViewModels\UserInfos.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -831,14 +834,15 @@
     <Content Include="Views\Case\CreateCase.cshtml" />
     <Content Include="Views\Case\EditCase.cshtml" />
     <Content Include="Views\Case\EditLinManInfo.cshtml" />
-    <Content Include="Views\Case\ReturnTask.cshtml" />
     <Content Include="Views\BBHJCase\Index.cshtml" />
-    <Content Include="Views\BBHJCase\EditBBHJInfo.cshtml" />
     <Content Include="Views\SuccessCase\Index.cshtml" />
     <Content Include="Views\Case\FollowDetails.cshtml" />
     <Content Include="scripts\js\jquery-1.10.2.min.map" />
     <Content Include="Views\Case\AddFollowDetails.cshtml" />
     <Content Include="Views\Case\UpdateFollowDetails.cshtml" />
+    <Content Include="Views\BBHJCase\AddBBHJ.cshtml" />
+    <Content Include="Views\ReturnCase\AddReturnTask.cshtml" />
+    <Content Include="Views\ReturnCase\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -864,7 +868,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>48787</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost/SRIS</IISUrl>
+          <IISUrl>http://localhost:48787/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
