--- a/SRIS/SRIS.DAL/SRIS.DAL.csproj
+++ b/SRIS/SRIS.DAL/SRIS.DAL.csproj
@@ -59,6 +59,7 @@
     <Compile Include="FollowDetailsDal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegisterInfoDal.cs" />
+    <Compile Include="ReturnCaseDal.cs" />
     <Compile Include="SuccessCaseDal.cs" />
     <Compile Include="UserInfoDal.cs" />
   </ItemGroup>
